--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<%- include('partials/head.ejs', {title: 'Inicio' }) %>
+<%- include('partials/head.ejs', {title: 'Detalle del producto' }) %>
 
     <body>
         <!--Inicio cabecera-->
