--- a/src/views/formLogin.ejs
+++ b/src/views/formLogin.ejs
@@ -15,7 +15,7 @@
                             <label for="" class="label">Usuario</label>
                             <input type="email" name="email" id="">
                             <% if (locals.errors && errors.email) { %>
-                             <div class="error-message">
+                             <div class="error-message-login">
                                 <%= errors.email.msg %>
                              </div>
                             <% } %>
