--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,16 +1,17 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casquillera<%= locals.title ? ' - ' + title : ''%></title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/loginAndRegister.css">
-    <link rel="stylesheet" href="/css/usersStyle.css">
-    <link rel="stylesheet" type="text/css" href="/css/homeMediaQuery.css">
-    <link rel="stylesheet" href="/css/nav.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Casquillera<%= locals.title ? ' - ' + title : ''%></title>
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/loginAndRegister.css">
+  <link rel="stylesheet" href="/css/usersStyle.css">
+  <link rel="stylesheet" type="text/css" href="/css/homeMediaQuery.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/productIndex.css">
 </head>
 
