--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/head.ejs', {title: 'cart' }) %>
+<%- include('partials/head.ejs', {title: 'carrito' }) %>
     <!--Inicio cabecera-->
 
     <body class="body-cart">
