--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,9 +4,9 @@
         <div id="menu_footer">
             <h5>MENÚ</h5>
             <ul>
-                <li> <a href="#">Inicio</a></li>
+                <li> <a href="/">Inicio</a></li>
                 <li> <a href="/product">Productos</a></li>
-                <li> <a href="#">Carrito</a></li>
+                <li> <a href="/cart">Carrito</a></li>
                 <li> <a href="/contacto">Contacto</a></li>
                 <li> <a href="/quienes-somos">Quienes somos</a></li>
             </ul>
@@ -22,7 +22,7 @@
         <div id="menu_footer">
             <h5>Redes</h5>
             <ul>
-                <li> <a href="#">Facebook</a></li>
+                <li> <a href="https://www.facebook.com/profile.php?id=100075659935879" target="_blank" >Facebook</a></li>
                 <li> <a href="">Instragram</a></li>
                 <li> <a href="#">Twitter</a></li>
             </ul>
