--- a/src/views/productEdit.ejs
+++ b/src/views/productEdit.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs', {title: 'Registrar Producto'}) %>
+<%- include('partials/head.ejs', {title: 'Editar tu Producto'}) %>
 
     <body>
         <!--Inicio cabecera-->
