--- a/src/views/viewsContact.ejs
+++ b/src/views/viewsContact.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs') %>
+
+<%- include('partials/head.ejs', {title: 'Contacto ' }) %>
 
 
     <body>
