--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,19 +7,8 @@
             <li class="menu_item">
                 <a href="/" class="menu_link">Inicio</a>
             </li>
-
-            <li class="menu_item menu_item--show">
-                <a href="#" class="menu_link">Nuestas cepas <img src="/img/svg/arrow.svg" class="menu_arrow"></a>
-
-                <ul class="menu_nesting">
-                    <li class="menu_inside">
-                        <a href="/product" class="menu_link menu_link--inside ">Nuestros productos</a>
-                    </li>
-                    <li class="menu_inside">
-                        <a href="/product/create" class="menu_link menu_link--inside ">Crea tu producto</a>
-                    </li>
-                    
-                </ul>
+            <li class="menu_item">
+                <a href="/product" class="menu_link">Nuestros productos</a>
             </li>
 
             <li class="menu_item menu_item--show">
