--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -41,7 +41,7 @@
                     <% if (locals.isLogged ) { %>
                         <div class="profile-button">
                             <a href="/product/edit/<%= productId.id %>">
-                                <button class="zoom-button">Editar Producto</button>
+                                <button class="zoom-button">Editar</button>
                             </a>
                             <form action="/product/delete/<%= productId.id %>?_method=DELETE" method="POST">
                                 <button class="zoom-button" type="submit">Eliminar</button>
